--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.header.img{
+  height: 10%;
+  width: 50%;
+  float: left;
+}
 body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background: black;
@@ -12,6 +17,33 @@ body {
     display: inline-block;
   }
   
-  .centered {
-    text-align: center;
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+  
+
+
+
+
+
+
+@media screen and (max-width: 500px) {
+  .column {
+    width: 100%;
   }
+}
