--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@ body {
     background: black;
     color: white;
     text-align: center;
+    font-size: large;
   }
   input {
     background: rgb(255, 255, 255);
